--- a/docroot/web/profiles/xnavi/modules/knowledgemap/knowledgemap.info.yml
+++ b/docroot/web/profiles/xnavi/modules/knowledgemap/knowledgemap.info.yml
@@ -3,6 +3,6 @@ type: module
 description: 'Create, edit and view knowledge maps in Drupal'
 core: 8.x
 core_version_requirement: ^8 || ^9
-package: x.Navi Optional
+package: 'x.Navi'
 dependencies:
   - image
