--- a/docroot/web/profiles/xnavi/modules/knowledgemap/config/install/block.block.hervorgehobenesformularportalsuchepage_1.yml
+++ b/docroot/web/profiles/xnavi/modules/knowledgemap/config/install/block.block.hervorgehobenesformularportalsuchepage_1.yml
@@ -7,10 +7,10 @@ dependencies:
     - views
   theme:
     - zfdw_b4
-id: zfdw_b4_hervorgehobenesformularportalsuchepage_1
+id: hervorgehobenesformularportalsuchepage_1
 theme: zfdw_b4
-region: sidebar_first
-weight: -12
+region: sidebar
+weight: -8
 provider: null
 plugin: 'views_exposed_filter_block:portalsuche-page_1'
 settings:
