Dependency Bug solved

--- a/docroot/web/profiles/xnavi/config/install/block.block.zfdw_b4_breadcrumbs.yml
+++ b/docroot/web/profiles/xnavi/config/install/block.block.zfdw_b4_breadcrumbs.yml
@@ -3,8 +3,8 @@ status: false
 dependencies:
   module:
     - system
-  theme:
-    - zfdw_b4
+  #theme:
+  #  - zfdw_b4
 id: zfdw_b4_breadcrumbs
 theme: zfdw_b4
 region: breadcrumb
