Added tour styling to the zfdw theme

--- a/docroot/web/profiles/xnavi/themes/zfdw_b4/zfdw_b4.info.yml
+++ b/docroot/web/profiles/xnavi/themes/zfdw_b4/zfdw_b4.info.yml
@@ -9,6 +9,7 @@ stylesheets-remove:
 libraries:
   - zfdw_b4/global-styling
   - zfdw_b4/fontawesome
+  - zfdw_b4/tour-styling
 regions:
   banner: 'Top banner region'
   header: Header
