--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   xnavi_d9_drupal:
     depends_on:
       - xnavi_d9_db
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     build: .
     container_name: "${PROJECT_NAME}_drupal"
     ports:
