Design Thinking module with REST Endpoints

--- a/docroot/web/modules/custom/design_thinking/design_thinking.info.yml
+++ b/docroot/web/modules/custom/design_thinking/design_thinking.info.yml
@@ -4,3 +4,5 @@ description: DT for Documentation
 package: x.Navi
 core: 8.x
 core_version_requirement: ^8 || ^9
+dependencies:
+   -default_content:default_content
