--- a/docroot/web/modules/custom/key_management/key_management.routing.yml
+++ b/docroot/web/modules/custom/key_management/key_management.routing.yml
@@ -1,7 +1,7 @@
 key_management.restapi.endpoint:
   path: '/key-management/{key}/{id}'
   defaults:
-    _controller: 'key_management.restapi.requestEndpoint'
+    _controller: 'key_management.restapi:requestEndpoint'
     id: 0
   methods: [GET, POST]
   requirements:
